--- a/index.html
+++ b/index.html
@@ -12,7 +12,63 @@
 
   </head>
   <body>
+      <div class="container pt-2">
+        <!-- About -->
+      <div class="row">
+        <div class="col-lg-4 order-lg-2">
+          <h3 class="mb-2">About Full Stack Conf</h3>
+          <img class="mb-1 img-fluid rounded d-print" src="img/pdx.jpg" alt="Portland"/>
+          <p>The beautiful city of Portland, Oregon will be the host city for Full Stack Conf!</p>
+          <p>Explore the future of JavaScript with a lineup of industry professionals. Discover new
+            techniques to advance your career as a web developer.</p>
+        </div>
+        <div class="col-lg-4">
+          <h3 class="mb-2">Expert Speakers</h3>
+          <p>Our expert speaker lineup was just announced, so don't wait too long before grabbing your tickets!</p>
+          <p>Want to meet the international JavaScript community and share skills with some of the world's top experts,
+            hackers, and makers? Be the first to know what to expect for the future of JavaScript.</p>
+            <p>Full Stack Conf is committed to being inclusive and welcoming for everyone. We look forward to another intensive day of learning and sharing.</p>
+        </div>
+        <div class="col-lg-4 order-2">
+          <h3 class="mb-2">What You'll Learn</h3>
+          <ul>
+            <li><strong>MongoDB</strong>: NoSQL database</li>
+            <li><strong>Angular</strong>: JavaScript framework</li>
+            <li><strong>Express</strong>: Framework for Node</li>
+            <li><strong>Node.js</strong>: JavaScript environment</li>
+            <li><strong>ES2015</strong>: Latest version of JavaScript</li>
+            <li><strong>Babel</strong>: JavaScript compiler</li>
+          </ul>
+        </div>
+      </div><!--/.About-->
 
+      <!--  Speaker-->
+      <h1 class="display-4 text-center my-3 text-secondary">Speakers</h1>
+      [Speaker bios go here]
+      <!--  Schecdule-->
+      <h1 class="display-4 text-center my-3 text-secondary">Schedule</h1>
+      [Conference schedule here]
+
+      <!-- signup form -->
+      <hr>
+      <div class="row py-4 text-muted">
+        <div class="col-md-6 col-xl-5">
+          <p><strong>About Treehouse</strong></p>
+          <p>Treehouse brings affordable technology education to people everywhere to help them achieve their dreams and change the world.</p>
+        </div>
+        <div class="col-md-6 ml-md-auto">
+          <p><strong>Stay up-to-date on Full Stack Conf</strong></p>
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Email">
+            <span class="input-group-btn">
+              <button class="btn btn-primary" type="button">Sign up</button>
+            </span>
+          </div>
+        </div>
+      </div>
+      <hr><!-- /signup form -->
+
+    </div><!--/.Container-->
 
     <!-- jQuery first, then bootstrap js -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
