added navbar and links

--- a/index.html
+++ b/index.html
@@ -12,6 +12,28 @@
 
   </head>
   <body>
+      <!--  Navigation bar-->
+      <!-- <nav class="navbar navbar-light" style="background-color: #e3f2fd;"> -->
+        <!-- Navbar content -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+          <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+          <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-item nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="#about">About</a>
+                <a class="nav-item nav-link" href="#speakers">Speaker</a>
+                <a class="nav-item nav-link" href="#schedule">Schedule</a>
+              </div>
+            </div>
+            <a class="navbar-brand float-sm-right mr-0 d-xm-none" href="https://github.com/CrescensMay">Presented by SmartSoft</a>
+          </div>
+        </nav>
+      <!-- </nav> -->
+      <!--  Navigation bar-->
       <div class="container pt-2">
         <!-- About -->
       <div class="row">
