added a jumbotron to showcase key content

--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
         </nav>
       <!-- </nav> -->
       <!--  Navigation bar-->
+      <!--  Jumbotron-->
+      <div class="jumbotron jumbotron-fluid" style="background-color: #e3f2fd;">
+        <div class="container text-center pt-3">
+          <h1 class="display-3">Full Stack Conf</h1>
+          <p class="lead">A One-day Conference About All Things JavaScript</p>
+        </div>
+      </div>
+      <!-- Jumbotron -->
       <div class="container pt-2">
         <!-- About -->
       <div class="row">
