added button and button groups

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
         <div class="container text-center pt-3">
           <h1 class="display-3">Full Stack Conf</h1>
           <p class="lead">A One-day Conference About All Things JavaScript</p>
+          <div class="btn-group mt-2" role="group" aria-label="Basic example">
+            <button type="button" class="btn btn-primary btn-lg">Register Now</button>
+            <a class="btn btn-secondary btn-lg" href="#speaker">See Speaker</a>
+          </div>
         </div>
       </div>
       <!-- Jumbotron -->
@@ -73,11 +77,15 @@
       </div><!--/.About-->
 
       <!--  Speaker-->
-      <h1 class="display-4 text-center my-3 text-secondary">Speakers</h1>
+      <h1 class="display-4 text-center my-3 text-secondary" id="speaker">Speakers</h1>
       [Speaker bios go here]
       <!--  Schecdule-->
       <h1 class="display-4 text-center my-3 text-secondary">Schedule</h1>
       [Conference schedule here]
+
+      <!--  callout buttons-->
+      <button type="button" class="btn btn-outline-primary btn-lg my-3" style="position:relative;left:10.5em;">Don't miss out, Register now</button>
+      <!--  callout buttons-->
 
       <!-- signup form -->
       <hr>
