--- a/index.html
+++ b/index.html
@@ -106,6 +106,38 @@
       </div>
       <hr><!-- /signup form -->
 
+      <!-- footer -->
+      <div class="row py-3">
+        <div class="col-md-7">
+          <ul class="nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Community</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Tracks</a>
+            </li>
+            <li class="nav-item">
+              <!-- Example split danger button -->
+              <div class="btn-group dropup">
+                <button type="button" class="btn btn-outline-secondary">Other Confs</button>
+                <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <span class="sr-only">Toggle Dropdown</span>
+                </button>
+                <div class="dropdown-menu">
+                  <a class="dropdown-item" href="#">CSS Conf</a>
+                  <a class="dropdown-item" href="#">Python Config</a>
+                  <a class="dropdown-item" href="#">Java Conf</a>
+                  <a class="dropdown-item" href="#">Swift Conf</a>
+                </div>
+            </div>
+            </li>
+        </ul>
+        </div>
+        <div class="col-md-5 text-md-right">
+          <small>&copy;<script>document.write(new Date().getFullYear())</script> Crescens.K &amp; SmartSoft</small>
+        </div>
+      </div>
+      <!-- footer -->
     </div><!--/.Container-->
 
     <!-- jQuery first, then bootstrap js -->
