--- a/index.html
+++ b/index.html
@@ -78,7 +78,66 @@
 
       <!--  Speaker-->
       <h1 class="display-4 text-center my-3 text-secondary" id="speaker">Speakers</h1>
-      [Speaker bios go here]
+      <div class="row">
+        <div class="col-md-6 col-lg-4">
+          <div class="card"><!--style="width: 20rem;"-->
+            <img class="card-img-top img-fluid" src="img/geo.png" alt="Card image cap">
+            <div class="card-body">
+              <h4 class="card-title">Crescens Kob</h4>
+              <p class="card-text">I am a student majoring in the field of software engineering, I am passionate in web front-end, Android App and IOS App developing </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-4">
+          <div class="card">
+            <img class="card-img-top" src="img/nodestradamus.png" alt="Card image cap">
+            <div class="card-body">
+              <h4 class="card-title">Nodestra</h4>
+              <p class="card-text">"NodeStra" is a software engineer and philosopher trying to leave the world better than he found it. He codes for non-profits, eCommerce, and large-scale web apps.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-4">
+          <div class="card">
+            <img class="card-img-top" src="img/jay.png" alt="Card image cap">
+            <div class="card-body">
+              <h4 class="card-title">Jay</h4>
+              <p class="card-text">Jay is a developer, author of CSS: The Missing Manual, JavaScript &amp; jQuery: The Missing Manual, and web development teacher.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4">
+          <div class="card">
+            <img class="card-img-top" src="img/ecma.png" alt="Card image cap">
+            <div class="card-body">
+              <h4 class="card-title">Ecma</h4>
+              <p class="card-text">Ecma found her passion for computers and programming over 15 years ago. She is excited to introduce people to the wonderful world of JavaScript.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-4">
+          <div class="card">
+            <img class="card-img-top" src="img/json.png" alt="Card image cap">
+            <div class="card-body">
+              <h4 class="card-title">Json</h4>
+              <p class="card-text">All of his professional life, Json has worked with computers online; he is a polyglot programmer and likes using the right tools for the job.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4">
+          <div class="card">
+            <img class="card-img-top" src="img/geo.png" alt="Card image cap">
+            <div class="card-body">
+              <h4 class="card-title">Geo</h4>
+              <p class="card-text">Geo is a JavaScript developer working on large-scale applications. He's also a teacher who strives to support students in removing all barriers to learning code.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Speaker -->
       <!--  Schecdule-->
       <h1 class="display-4 text-center my-3 text-secondary">Schedule</h1>
       [Conference schedule here]
