--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
         </div>
         <div class="col-lg-4 order-2">
           <h3 class="mb-2">What You'll Learn</h3>
-          <ul>
-            <li><strong>MongoDB</strong>: NoSQL database</li>
-            <li><strong>Angular</strong>: JavaScript framework</li>
-            <li><strong>Express</strong>: Framework for Node</li>
-            <li><strong>Node.js</strong>: JavaScript environment</li>
-            <li><strong>ES2015</strong>: Latest version of JavaScript</li>
-            <li><strong>Babel</strong>: JavaScript compiler</li>
+          <ul class="list-group">
+            <a href="#" class="list-group-item"><strong>MongoDB</strong>: NoSQL database</a>
+            <a href="#" class="list-group-item"><strong>Angular</strong>: JavaScript framework</a>
+            <a href="#" class="list-group-item"><strong>Express</strong>: Framework for Node</a>
+            <a href="#" class="list-group-item"><strong>Node.js</strong>: JavaScript environment</a>
+            <a href="#" class="list-group-item"><strong>ES2015</strong>: Latest version of JavaScript</a>
+            <a href="#" class="list-group-item"><strong>Babel</strong>: JavaScript compiler</a>
           </ul>
         </div>
       </div><!--/.About-->
@@ -140,10 +140,60 @@
       <!-- Speaker -->
       <!--  Schecdule-->
       <h1 class="display-4 text-center my-3 text-secondary">Schedule</h1>
-      [Conference schedule here]
+      <ul class="list-group" id="schedule">
+        <li class="list-group-item list-group-item-action flex-column align-items-start">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">Keynote: Internet of Things</h5>
+            <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">9:00am</span>
+          </div>
+          <p class="mb-1">NodeStradamus</p>
+        </li>
+        <li class="list-group-item list-group-item-action flex-column align-items-start">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">Angular Basics</h5>
+            <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">10:00am</span>
+          </div>
+          <p class="mb-1">Angela McAngular</p>
+        </li>
+        <li class="list-group-item list-group-item-action flex-column align-items-start">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">Hey, Mongo!</h5>
+            <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">11:00am</span>
+          </div>
+          <p class="mb-1">Jay Query</p>
+        </li>
+        <li class="list-group-item list-group-item-action list-group-item-success flex-column align-items-start">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">Lunch</h5>
+            <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">12:00pm</span>
+          </div>
+          <p class="mb-1">Free pizza for everyone.</p>
+        </li>
+         <li class="list-group-item list-group-item-action flex-column align-items-start">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">Introducing ES2015</h5>
+            <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">1:00pm</span>
+          </div>
+          <p class="mb-1">Ecma Scriptnstuff</p>
+        </li>
+        <li class="list-group-item list-group-item-action flex-column align-items-start">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">Gettin' MEAN</h5>
+            <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">2:00pm</span>
+          </div>
+          <p class="mb-1">Geo "Lo" Cation</p>
+        </li>
+        <li class="list-group-item list-group-item-action flex-column align-items-start">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">What's Babel? </h5>
+            <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">3:00pm</span>
+          </div>
+          <p class="mb-1">Json Babel</p>
+        </li>
+      </ul>
 
       <!--  callout buttons-->
-      <button type="button" class="btn btn-outline-primary btn-lg my-3" style="position:relative;left:10.5em;">Don't miss out, Register now</button>
+      <button type="button" class="btn btn-outline-primary btn-lg my-3">Don't miss out, Register now</button>
       <!--  callout buttons-->
 
       <!-- signup form -->
