--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
   </head>
-  <body>
+  <body id="home" data-spy="scroll" data-target=".navbar" data-offset="100">
       <!--  Navigation bar-->
       <!-- <nav class="navbar navbar-light" style="background-color: #e3f2fd;"> -->
         <!-- Navbar content -->
@@ -48,7 +48,7 @@
       <!-- Jumbotron -->
       <div class="container pt-2">
         <!-- About -->
-      <div class="row">
+      <div id="about" class="row">
         <div class="col-lg-4 order-lg-2">
           <h3 class="mb-2">About Full Stack Conf</h3>
           <img class="mb-1 img-fluid rounded d-print" src="img/pdx.jpg" alt="Portland"/>
@@ -77,7 +77,7 @@
       </div><!--/.About-->
 
       <!--  Speaker-->
-      <h1 class="display-4 text-center my-3 text-secondary" id="speaker">Speakers</h1>
+      <h1 id="speakers" class="display-4 text-center my-3 text-secondary">Speakers</h1>
       <div class="row">
         <div class="col-md-6 col-lg-4">
           <div class="card"><!--style="width: 20rem;"-->
