--- a/index.html
+++ b/index.html
@@ -259,11 +259,29 @@
           </button>
         </div>
         <div class="modal-body">
-          <p>Form goes here</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-primary">Save changes</button>
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <!--  registration form-->
+          <form>
+            <h5 class="mb-2">Basic Info</h5>
+            <div class="form-group">
+              <label class="form-control-label" for="name">Name:</label>
+              <input type="text" class="form-control" id="name" placeholder="Enter Your Name">
+            </div>
+            <div class="form-group">
+              <label class="form-control-label" for="mail">Email</label>
+              <input type="email" class="form-control" id="mail" placeholder="Enter Your Email">
+            </div>
+            <fieldset>
+              <label for="role">Job Role:</label>
+              <select class="form-control" id="role" name="user_role">
+                <option value="full stack js developer">Full Stack JavaScript Developer</option>
+                <option value="front end developer">Front End Developer</option>
+                <option value="back end developer">Back End Developer</option>
+                <option value="designer">Designer</option>
+                <option value="student">Student</option>
+              </select>
+            </fieldset>
+         </form>
+          <!--  registration form-->
         </div>
       </div>
     </div>
