--- a/index.html
+++ b/index.html
@@ -252,14 +252,20 @@
     <div id="register" class="modal">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Register for Full Stack Conf</h5>
+        <div class="modal-header bg-primary">
+          <h5 class="modal-title" style="color:#fff;">Register for Full Stack Conf</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
           <!--  registration form-->
+          <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <strong>Hurry</strong> Early registration bird ends in 2 days.
+          </div>
           <form>
             <h5 class="mb-2">Basic Info</h5>
             <div class="form-group">
@@ -280,6 +286,35 @@
                 <option value="student">Student</option>
               </select>
             </fieldset>
+            <hr class="my-2">
+            <h5>Which Topics Interest You Most?</h5>
+            <div class="form-group c-inputs-stacked">
+              <label class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input">
+                <span class="custom-control-indicator"></span>
+                <span class="custom-control-description">JavaScript Framework</span>
+              </label>
+              <label class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input">
+                <span class="custom-control-indicator"></span>
+                <span class="custom-control-description">JavaScript Libraries</span>
+              </label>
+              <label class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input">
+                <span class="custom-control-indicator"></span>
+                <span class="custom-control-description">Node.js</span>
+              </label>
+              <label class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input">
+                <span class="custom-control-indicator"></span>
+                <span class="custom-control-description">Build Tools</span>
+              </label>
+              <label class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input">
+                <span class="custom-control-indicator"></span>
+                <span class="custom-control-description">ES2015</span>
+              </label>
+            </div>
          </form>
           <!--  registration form-->
         </div>
