adding validation styles

--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@
               <input type="text" class="form-control" id="name" placeholder="Enter Your Name">
             </div>
             <div class="form-group">
-              <label class="form-control-label" for="mail">Email</label>
-              <input type="email" class="form-control" id="mail" placeholder="Enter Your Email">
+              <label class="form-control-label" for="mail">Email:</label>
+              <input type="email" class="form-control is-invalid" id="mail" placeholder="Enter Your Email">
             </div>
             <fieldset>
               <label for="role">Job Role:</label>
@@ -318,9 +318,9 @@
             <hr class="mb-2">
             <h5 class="mb-2">Payment Info</h5>
             <div class="row">
-            <div class="col-lg-6 form-group">
-              <label for="cc-num">Card Number:</label>
-              <input class="form-control" id="cc-num" type="text">
+            <div class="col-lg-6 form-group alert-success">
+              <label class="form-control-label" for="cc-num">Card Number:</label>
+              <input class="form-control form-control-success" id="cc-num" type="text">
             </div>
 
             <div class="col-lg-3 form-group">
