--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- bootstrap css -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
     integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/custom.css">
 
 
   </head>
@@ -193,7 +194,9 @@
       </ul>
 
       <!--  callout buttons-->
-      <button type="button" class="btn btn-outline-primary btn-lg my-3"  data-toggle="modal" data-target="#register">Don't miss out, Register now</button>
+      <div class="mybtn">
+          <button type="button" class="btn btn-outline-primary btn-lg my-3"  data-toggle="modal" data-target="#register">Don't miss out, Register now</button>
+      </div>
       <!--  callout buttons-->
 
       <!-- signup form -->
