--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       <div class="row py-4 text-muted">
         <div class="col-md-6 col-xl-5">
           <p><strong>About Treehouse</strong></p>
-          <p>Treehouse brings affordable technology education to people everywhere to help them achieve their dreams and change the world.</p>
+          <p>SmartSoft brings affordable technology education to people everywhere to help them achieve their dreams and change the world.</p>
         </div>
         <div class="col-md-6 ml-md-auto">
           <p><strong>Stay up-to-date on Full Stack Conf</strong></p>
