--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
       <hr>
       <div class="row py-4 text-muted">
         <div class="col-md-6 col-xl-5">
-          <p><strong>About Treehouse</strong></p>
-          <p>SmartSoft brings affordable technology education to people everywhere to help them achieve their dreams and change the world.</p>
+          <p><strong>About SmartSoft</strong></p>
+          <p>SmartSoft brings affordable technology education to people everywhere to help them achieve their dreams and change the worl and some developer also working as freelancers.</p>
         </div>
         <div class="col-md-6 ml-md-auto">
           <p><strong>Stay up-to-date on Full Stack Conf</strong></p>
