--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
     integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link rel="stylesheet" href="css/custom.css">
+    <script type="text/javascript" src="jquery/jquery.js"></script>
 
 
   </head>
@@ -148,6 +149,8 @@
             <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">9:00am</span>
           </div>
           <p class="mb-1">NodeStradamus</p>
+            <hr class="my-2">
+          <p class="hidden">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy </p>
         </li>
         <li class="list-group-item list-group-item-action flex-column align-items-start">
           <div class="d-flex w-100 justify-content-between">
@@ -155,6 +158,8 @@
             <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">10:00am</span>
           </div>
           <p class="mb-1">Angela McAngular</p>
+            <hr class="my-2">
+          <p class="hidden">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy </p>
         </li>
         <li class="list-group-item list-group-item-action flex-column align-items-start">
           <div class="d-flex w-100 justify-content-between">
@@ -162,6 +167,8 @@
             <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">11:00am</span>
           </div>
           <p class="mb-1">Jay Query</p>
+            <hr class="my-2">
+          <p class="hidden">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy </p>
         </li>
         <li class="list-group-item list-group-item-action list-group-item-success flex-column align-items-start">
           <div class="d-flex w-100 justify-content-between">
@@ -169,6 +176,8 @@
             <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">12:00pm</span>
           </div>
           <p class="mb-1">Free pizza for everyone.</p>
+            <hr class="my-2">
+          <p class="hidden">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy </p>
         </li>
          <li class="list-group-item list-group-item-action flex-column align-items-start">
           <div class="d-flex w-100 justify-content-between">
@@ -176,6 +185,8 @@
             <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">1:00pm</span>
           </div>
           <p class="mb-1">Ecma Scriptnstuff</p>
+            <hr class="my-2">
+          <p class="hidden">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy </p>
         </li>
         <li class="list-group-item list-group-item-action flex-column align-items-start">
           <div class="d-flex w-100 justify-content-between">
@@ -183,6 +194,8 @@
             <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">2:00pm</span>
           </div>
           <p class="mb-1">Geo "Lo" Cation</p>
+          <hr class="my-2">
+          <p class="hidden">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy </p>
         </li>
         <li class="list-group-item list-group-item-action flex-column align-items-start">
           <div class="d-flex w-100 justify-content-between">
@@ -190,6 +203,8 @@
             <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">3:00pm</span>
           </div>
           <p class="mb-1">Json Babel</p>
+          <hr class="my-2">
+          <p class="hidden">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy </p>
         </li>
       </ul>
 
@@ -379,6 +394,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="jquery/query.js"></script>
 
   </body>
 </html>
