--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <p class="lead">A One-day Conference About All Things JavaScript</p>
           <div class="btn-group mt-2" role="group" aria-label="Basic example">
             <button type="button" class="btn btn-primary btn-lg"  data-toggle="modal" data-target="#register">Register Now</button>
-            <a class="btn btn-secondary btn-lg" href="#speaker">See Speaker</a>
+            <a class="btn btn-secondary btn-lg" href="#speakers">See Speaker</a>
           </div>
         </div>
       </div>
