--- a/index.html
+++ b/index.html
@@ -143,8 +143,9 @@
       <!--  Schecdule-->
       <h1 class="display-4 text-center my-3 text-secondary">Schedule</h1>
       <ul class="list-group" id="schedule">
-        <li class="list-group-item list-group-item-action flex-column align-items-start">
-          <div class="d-flex w-100 justify-content-between">
+        <li class="list-group-item list-group-item-action flex-column align-items-start media">
+          <img class="d-flex align-self-start mr-3 img-fluid rounded imgge" src="img/moi.jpg" alt="Generic placeholder image">
+          <div class="d-flex w-100 justify-content-between media-body">
             <h5 class="mb-1">Keynote: Internet of Things</h5>
             <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">9:00am</span>
           </div>
@@ -153,6 +154,7 @@
           <p class="hidden">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy </p>
         </li>
         <li class="list-group-item list-group-item-action flex-column align-items-start">
+          <img class="d-flex align-self-start mr-3 img-fluid rounded imgge" src="img/geo.png" alt="Generic placeholder image">
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">Angular Basics</h5>
             <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">10:00am</span>
@@ -162,6 +164,7 @@
           <p class="hidden">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy </p>
         </li>
         <li class="list-group-item list-group-item-action flex-column align-items-start">
+          <img class="d-flex align-self-start mr-3 img-fluid rounded imgge" src="img/nodestradamus.png" alt="Generic placeholder image">
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">Hey, Mongo!</h5>
             <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">11:00am</span>
@@ -171,6 +174,7 @@
           <p class="hidden">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy </p>
         </li>
         <li class="list-group-item list-group-item-action list-group-item-success flex-column align-items-start">
+          <!-- <img class="d-flex align-self-start mr-3 img-fluid rounded imgge" src="img/ecma.png" alt="Generic placeholder image"> -->
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">Lunch</h5>
             <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">12:00pm</span>
@@ -180,6 +184,7 @@
           <p class="hidden">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy </p>
         </li>
          <li class="list-group-item list-group-item-action flex-column align-items-start">
+           <img class="d-flex align-self-start mr-3 img-fluid rounded imgge" src="img/json.png" alt="Generic placeholder image">
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">Introducing ES2015</h5>
             <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">1:00pm</span>
@@ -189,6 +194,7 @@
           <p class="hidden">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy </p>
         </li>
         <li class="list-group-item list-group-item-action flex-column align-items-start">
+          <img class="d-flex align-self-start mr-3 img-fluid rounded imgge" src="img/jay.png" alt="Generic placeholder image">
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">Gettin' MEAN</h5>
             <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">2:00pm</span>
@@ -198,6 +204,7 @@
           <p class="hidden">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy </p>
         </li>
         <li class="list-group-item list-group-item-action flex-column align-items-start">
+          <img class="d-flex align-self-start mr-3 img-fluid rounded imgge" src="img/angie.png" alt="Generic placeholder image">
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">What's Babel? </h5>
             <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">3:00pm</span>
